css/creature-block.css
.creatureBlock {
    display: grid;
    grid-template-areas:
        'title'
        'stats'
        'description'
        'actions';
    gap: 0px;
    border: none;
    margin-top: 50px;
}

.title {
    grid-area: title;
    margin: 0;
    border: none;
    font-size: 20px;
    font-weight: 700;
    text-align: left;
}

.stats {
    grid-area: stats;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.stats p {
    margin: 0;
}

.description {
    grid-area: description;
    display: flex;
    align-items: center;
}

.actions {
    grid-area: actions;
}

.actions, .description, .stats {
    border: 1px solid var(--text-color);
    margin: 0;
    padding: 10px;
}

.actionHead {
    width: 100%;
    text-align: center;
    text-decoration: underline;
    font-weight: 700;
}

@media (min-width: 992px) {
    .creatureBlock {
        grid-template-areas:
            'title title'
            'stats actions'
            'description actions';
        width: initial;
        margin: none;
    }
}

